--- a/example/storybook/src/components/Forms/FormControl/index.stories.mdx
+++ b/example/storybook/src/components/Forms/FormControl/index.stories.mdx
@@ -20,9 +20,11 @@ import {
   AppProvider,
   CodePreview,
   Table,
+  TableContainer,
   Text,
   AddIcon,
   InfoIcon,
+  TableContainer,
   InlineCode,
 } from '@gluestack/design-system';
 
